# workshop

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/: init.sql
service-a/: Dockerfile  main.py
service-b/: Dockerfile  main.py
