[tool.poetry]
name = "microservice-testing-workshop"
version = "0.1.0"
description = "Workshop for microservice testing using FastAPI, Postgres, Pact, and Testcontainers"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "service-a" },
    { include = "service-b" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.4"

# contract testing
pact-python = "^1.5.0"

# testcontainers
testcontainers = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
